--- a/RSSReader/app/src/main/res/layout/activity_main.xml
+++ b/RSSReader/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Parse XML" />
+        android:text="Refresh" />
 
     <ListView
         android:id="@+id/listApps"
@@ -26,7 +26,15 @@
         android:visibility="invisible" >
     </ListView>
 
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search"
+        android:id="@+id/button2"
+        android:layout_above="@+id/listApps"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="search_button" />
 
 
 </RelativeLayout>
