--- a/RSSReader/app/src/main/res/menu/menu_main.xml
+++ b/RSSReader/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/refresh"
+        android:icon="@drawable/ic_refresh_white"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        android:visible="true"
+        />
+    <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_search_white"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        android:visible="true"
+        />
 </menu>
