--- a/RSSReader/app/src/main/res/menu/menu_main.xml
+++ b/RSSReader/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item
+        android:id="@+id/memory"
+        android:title="mem"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        android:visible="true"
+        />
+    <item
         android:id="@+id/refresh"
         android:icon="@drawable/ic_refresh_white"
         android:orderInCategory="100"
