--- a/RSSReader/app/src/main/res/menu/menu_stored_news.xml
+++ b/RSSReader/app/src/main/res/menu/menu_stored_news.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context="network.rembo.rss.NewsActivity">
     <item
         android:title="saveNews"
-        android:id="@+id/saveNews"
-        android:icon="@drawable/ic_save_white"
+        android:id="@+id/deleteNews"
+        android:icon="@drawable/ic_delete_white"
         android:orderInCategory="100"
         app:showAsAction="always"
         />
