--- a/RSSReader/app/src/main/res/layout/activity_lang.xml
+++ b/RSSReader/app/src/main/res/layout/activity_lang.xml
@@ -1,4 +1,4 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -6,31 +6,36 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="network.rembo.rss.LangActivity"
     android:transitionGroup="true"
-    android:background="@drawable/bg">
+    android:background="@drawable/bg"
+    android:gravity="center">
 
 
     <ImageView
-        android:layout_width="200dp"
+        android:layout_width="350dp"
         android:layout_height="270dp"
         android:id="@+id/imageView"
-        android:background="@drawable/socarlogo" />
+        android:background="@drawable/socarlogo"
+        android:layout_centerHorizontal="true"/>
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="40dp"
-        >
+    <LinearLayout
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:paddingLeft="4.0dip"
+        android:paddingTop="5.0dip"
+        android:paddingRight="4.0dip"
+        android:paddingBottom="1.0dip"
+        android:layout_marginTop="15dp"
+        android:layout_width="fill_parent" android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView">
+
         <Button
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:id="@+id/button_aze"
             android:background="@drawable/aze"
-            android:elegantTextHeight="false"
             android:onClick="aze_button"
-            android:layout_below="@+id/imageView"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"
             style="?android:attr/borderlessButtonStyle" />
 
         <Button
@@ -38,14 +43,11 @@
             android:layout_height="130dp"
             android:id="@+id/button_brit"
             android:background="@drawable/brit"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="45dp"
-            android:layout_marginStart="197dp"
-            android:layout_alignTop="@+id/button_aze"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:onClick="brit_button"
-            android:layout_gravity="bottom"
             style="?android:attr/borderlessButtonStyle" />
-    </TableRow>
+    </LinearLayout>
 
-</TableLayout>
+
+</RelativeLayout>
